--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "code-complexity": "bin/code-complexity"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha test/*.test.js"
   },
   "keywords": [
     "complexity",
@@ -18,13 +18,16 @@
   "author": "Simon Renoult <simon.renoult@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "chai": "^4.1.2",
     "eslint": "^4.19.0",
     "eslint-config-prettier": "^2.8.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-node": "^5.2.1",
     "eslint-plugin-prettier": "^2.3.1",
     "eslint-plugin-promise": "^3.6.0",
-    "prettier": "^1.11.1"
+    "mocha": "^5.0.5",
+    "prettier": "^1.11.1",
+    "proxyquire": "^2.0.1"
   },
   "dependencies": {
     "chalk": "^2.3.2",
