--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "code-complexity": "bin/code-complexity"
   },
   "scripts": {
+    "pretest": "eslint .",
     "test": "mocha test/*.test.js"
   },
   "keywords": [
