--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "code-complexity": "bin/code-complexity"
   },
   "scripts": {
-    "pretest": "eslint .",
-    "test": "mocha test/*.test.js"
+    "lint": "eslint .",
+    "pretest": "npm run lint",
+    "test": "NODE_ENV=test nyc mocha spec/**/*.test.js",
+    "coverage": "NODE_ENV=test nyc report --reporter=text-lcov > coverage.lcov && codecov"
   },
   "keywords": [
     "complexity",
@@ -20,6 +22,7 @@
   "license": "MIT",
   "devDependencies": {
     "chai": "^4.1.2",
+    "codecov": "^3.0.0",
     "eslint": "^4.19.0",
     "eslint-config-prettier": "^2.8.0",
     "eslint-plugin-import": "^2.8.0",
@@ -27,6 +30,7 @@
     "eslint-plugin-prettier": "^2.3.1",
     "eslint-plugin-promise": "^3.6.0",
     "mocha": "^5.0.5",
+    "nyc": "^11.6.0",
     "prettier": "^1.11.1",
     "proxyquire": "^2.0.1"
   },
