--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "code-complexity",
   "version": "2.0.0",
-  "description": "Measure projects complexity based on files sloc and commit number.",
+  "description": "Measure projects complexity based on files sloc and commit count.",
   "main": "bin/code-complexity",
   "bin": {
     "code-complexity": "bin/code-complexity"
