--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "code-complexity",
   "version": "2.1.3",
   "description": "Measure projects complexity based on files sloc and commit count.",
-  "main": "bin/code-complexity",
+  "main": "src/index.ts",
   "bin": {
-    "code-complexity": "bin/code-complexity"
+    "code-complexity": "dist/index.js"
   },
   "repository": {
     "type": "git",
@@ -14,9 +14,10 @@
     "url": "https://github.com/simonrenoult/code-complexity/issues"
   },
   "scripts": {
-    "lint": "eslint .",
+    "lint": "eslint --ext .ts .",
     "pretest": "npm run lint",
     "test": "NODE_ENV=test nyc mocha test/**/*.test.js",
+    "build": "tsc",
     "coverage": "NODE_ENV=test nyc report --reporter=text-lcov > coverage.lcov && codecov"
   },
   "keywords": [
@@ -30,10 +31,15 @@
   "dependencies": {
     "chalk": "^3.0.0",
     "commander": "^4.1.1",
-    "node-sloc": "^0.1.12",
-    "path-exists": "^4.0.0"
+    "node-sloc": "^0.1.12"
   },
   "devDependencies": {
+    "@types/chai": "^4.2.10",
+    "@types/mocha": "^7.0.2",
+    "@types/node": "^13.9.0",
+    "@types/proxyquire": "^1.3.28",
+    "@typescript-eslint/eslint-plugin": "^2.23.0",
+    "@typescript-eslint/parser": "^2.23.0",
     "chai": "^4.2.0",
     "codecov": "^3.6.5",
     "eslint": "^6.8.0",
@@ -45,6 +51,7 @@
     "mocha": "^7.1.0",
     "nyc": "^15.0.0",
     "prettier": "^1.19.1",
-    "proxyquire": "^2.1.3"
+    "proxyquire": "^2.1.3",
+    "typescript": "^3.8.3"
   }
 }
