chore: add watch command for tests

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "lint": "eslint --ext .ts .",
     "prepare": "npm run lint && npm run build",
     "postversion": "git push --tags",
-    "test": "mocha test/*.ts --require ts-node/register"
+    "test": "mocha --require ts-node/register test/*.ts",
+    "test:watch": "mocha --require ts-node/register --watch --watch-files src/*.ts, test/*.ts"
   },
   "keywords": [
     "complexity",
