--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,18 @@
 language: node_js
 
 node_js:
-  - "8.9"
+  - 12
+
+git:
+  submodules: false
+
+before_install:
+  - sed -i 's/git@github.com:/https:\/\/github.com\//' .gitmodules
+  - git submodule update --init --recursive
 
 script:
+  - npm ci
   - npm test
-  
+
 after_success:
   - npm run coverage
