--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "code-complexity",
   "version": "3.3.0",
   "description": "Measure projects complexity based on files sloc and commit count.",
-  "main": "src/index.ts",
+  "main": "src/code-complexity.ts",
   "bin": {
-    "code-complexity": "dist/index.js"
+    "code-complexity": "dist/code-complexity.js"
   },
   "files": [
     "dist/"
