--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "code-complexity",
   "version": "3.3.2",
-  "description": "Measure projects complexity based on files sloc and commit count.",
-  "main": "src/code-complexity.ts",
+  "description": "Measure the churn/complexity ratio. Higher values mean hotspots where refactorings should happen.",
+  "author": "Simon Renoult <simon.renoult@gmail.com>",
+  "main": "dist/src/lib",
+  "types": "dist/src/lib/types.d.ts",
   "bin": {
-    "code-complexity": "dist/code-complexity.js"
+    "code-complexity": "dist/bin/code-complexity.js"
   },
-  "files": [
-    "dist/"
-  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/simonrenoult/code-complexity"
@@ -17,47 +16,54 @@
     "url": "https://github.com/simonrenoult/code-complexity/issues"
   },
   "scripts": {
-    "build": "tsc",
+    "build": "rm -rf dist && tsc",
     "coverage": "NODE_ENV=test nyc report --reporter=text-lcov > coverage.lcov && codecov",
     "lint": "eslint --ext .ts .",
     "prepare": "npm run lint && npm run build",
     "postversion": "git push --tags",
-    "test": "mocha --timeout=10000 --require ts-node/register test/*.ts",
-    "test:watch": "mocha --require ts-node/register --watch --watch-files src/*.ts, test/*.ts"
+    "pretest": "npm run lint",
+    "test": "mocha --require ts-node/register test/**/*.ts"
   },
   "keywords": [
+    "quality",
     "complexity",
+    "churn",
+    "refactoring",
     "sloc",
-    "commit",
-    "cli"
+    "commit"
   ],
-  "author": "Simon Renoult <simon.renoult@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "chalk": "^3.0.0",
+    "@types/micromatch": "^4.0.1",
+    "chalk": "^4.0.0",
+    "cli-table3": "^0.6.0",
     "commander": "^5.0.0",
-    "node-sloc": "^0.1.12"
+    "debug": "^4.1.1",
+    "micromatch": "^4.0.2",
+    "node-sloc": "^0.1.12",
+    "read-pkg-up": "^7.0.1"
   },
   "devDependencies": {
     "@types/chai": "^4.2.11",
+    "@types/debug": "^4.1.5",
     "@types/mocha": "^7.0.2",
-    "@types/node": "^13.9.1",
+    "@types/node": "^13.13.0",
     "@types/proxyquire": "^1.3.28",
-    "@typescript-eslint/eslint-plugin": "^2.24.0",
-    "@typescript-eslint/parser": "^2.24.0",
+    "@typescript-eslint/eslint-plugin": "^2.28.0",
+    "@typescript-eslint/parser": "^2.28.0",
     "chai": "^4.2.0",
     "codecov": "^3.6.5",
     "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.0",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-node": "^11.0.0",
-    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-config-prettier": "^6.10.1",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-promise": "^4.2.1",
-    "mocha": "^7.1.0",
-    "nyc": "^15.0.0",
-    "prettier": "^1.19.1",
+    "mocha": "^7.1.1",
+    "nyc": "^15.0.1",
+    "prettier": "^2.0.4",
     "proxyquire": "^2.1.3",
-    "ts-node": "^8.6.2",
+    "ts-node": "^8.8.2",
     "typescript": "^3.8.3"
   }
 }
