fix(#18): rename 'ratio' to 'score'

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "code-complexity",
   "version": "4.0.1",
-  "description": "Measure the churn/complexity ratio. Higher values mean hotspots where refactorings should happen.",
+  "description": "Measure the churn/complexity score. Higher values mean hotspots where refactorings should happen.",
   "author": "Simon Renoult <simon.renoult@gmail.com>",
   "main": "dist/src/lib",
   "types": "dist/src/lib/types.d.ts",
