--- a/package.json
+++ b/package.json
@@ -39,8 +39,7 @@
     "commander": "^5.0.0",
     "debug": "^4.1.1",
     "micromatch": "^4.0.2",
-    "node-sloc": "^0.1.12",
-    "read-pkg-up": "^7.0.1"
+    "node-sloc": "^0.1.12"
   },
   "devDependencies": {
     "@types/chai": "^4.2.11",
