--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   "license": "MIT",
   "dependencies": {
     "cli-table3": "^0.6.0",
-    "code-complexity": "^4.1.0",
+    "code-complexity": "l-marcel/code-complexity#module",
     "commander": "^5.0.0",
     "debug": "^4.1.1",
     "del": "^6.0.0",
