--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
     "commander": "^5.0.0",
     "debug": "^4.1.1",
     "del": "^6.0.0",
+    "fs": "^0.0.1-security",
     "micromatch": "^4.0.2",
+    "node": "^17.7.2",
     "node-sloc": "^0.1.12",
     "simple-git": "^3.7.1"
   },
@@ -52,7 +54,7 @@
     "@types/debug": "^4.1.5",
     "@types/micromatch": "^4.0.1",
     "@types/mocha": "^7.0.2",
-    "@types/node": "^13.13.0",
+    "@types/node": "^13.13.52",
     "@typescript-eslint/eslint-plugin": "^2.28.0",
     "@typescript-eslint/parser": "^2.28.0",
     "chai": "^4.2.0",
