--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "commander": "^9.4.1",
     "debug": "^4.3.4",
     "escomplex": "^2.0.0-alpha",
+    "esprima": "^4.0.1",
     "micromatch": "^4.0.5",
     "node-sloc": "^0.2.1"
   },
@@ -70,5 +71,8 @@
     "prettier": "^2.7.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
-  }
+  },
+  "bundleDependencies": [
+    "esprima"
+  ]
 }
