refactor: make internal structure clearer

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,10 +12,6 @@
     "prettier/prettier": "error",
     "no-console": "off",
     "@typescript-eslint/no-use-before-define": "off",
-    "@typescript-eslint/no-explicit-any": "off",
-    "sort-imports": [
-      "error",
-      { "ignoreCase":  true, "allowSeparatedGroups":  true }
-    ]
+    "@typescript-eslint/no-explicit-any": "off"
   }
 }
