--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "node-sloc": "^0.2.1"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-decorators": "^7.23.2",
     "@babel/preset-env": "^7.20.2",
     "@types/babel__core": "^7.1.20",
     "@types/chai": "^4.3.4",
